--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "deps/umqtt"]
 	path = deps/umqtt
-	url = https://github.com/marcschier/azure-umqtt-c.git
+	url = https://github.com/Azure/azure-umqtt-c.git
 [submodule "deps/shared"]
 	path = deps/shared
 	url = https://github.com/Azure/azure-c-shared-utility.git
