--- a/bld/docker/Dockerfile.alpine-3.6
+++ b/bld/docker/Dockerfile.alpine-3.6
@@ -1,4 +1,4 @@
-FROM alpine:3.5
+FROM alpine:3.6
 
 RUN \
         set -ex \
@@ -11,6 +11,8 @@ RUN \
             abuild \
             binutils \
             make \
-            linux-headers \
             libc-dev \
-            curl-dev
+            linux-headers \
+            libressl-dev \
+            curl-dev \
+            avahi-dev
