Update Nuget references for OPC-UA and fix client sample API changes Update Nuget package for service bus to 4.1.3. Rev appveyor to 1.0.3 Fix scan is started at ip + 1 Call xio_work on every event. Add netcat server mode.

--- a/api/csharp/samples/opc-ua/src/Microsoft.Azure.Devices.Proxy.Opc.Ua/Microsoft.Azure.Devices.Proxy.Opc.Ua.csproj
+++ b/api/csharp/samples/opc-ua/src/Microsoft.Azure.Devices.Proxy.Opc.Ua/Microsoft.Azure.Devices.Proxy.Opc.Ua.csproj
@@ -5,7 +5,7 @@
     <AssemblyTitle>Microsoft Azure Devices Opc-UA Reference Stack Proxy Transport</AssemblyTitle>
     <VersionPrefix>1.0.3</VersionPrefix>
     <Authors>microsoft</Authors>
-    <TargetFrameworks>net46;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>netstandard1.4</TargetFrameworks>
     <NoWarn>$(NoWarn);1591;1734</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -31,12 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Core" Version="0.2.4" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua" Version="0.4.1" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -49,10 +44,6 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Platform)'=='net46'">
-    <DefineConstants>$(DefineConstants);NET46</DefineConstants>
   </PropertyGroup>
 
 </Project>
