--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,13 @@ version: 1.0.3.{build}
 environment:
   matrix:
     - proxy: no_zlog 
-      build_args: -p Win32 --skip-unittests --skip-dotnet 
+      build_args: -p Win32 --skip-unittests
     - proxy: no_zlog_x64
-      build_args: -p x64 --skip-unittests --skip-dotnet 
+      build_args: -p x64 --skip-unittests 
     - proxy: with_openssl
-      build_args: -p Win32 --skip-unittests --skip-dotnet --use-openssl
+      build_args: -p Win32 --skip-unittests --use-openssl
     - proxy: with_libwebsockets
-      build_args: -p Win32 --skip-unittests --skip-dotnet --use-libwebsockets
+      build_args: -p Win32 --skip-unittests --use-libwebsockets
     - proxy: default
       build_args: -p Win32 --use-zlog
     - proxy: default_x64
