--- a/api/csharp/samples/opc-ua/src/Microsoft.Azure.Devices.Proxy.Opc.Ua/Microsoft.Azure.Devices.Proxy.Opc.Ua.csproj
+++ b/api/csharp/samples/opc-ua/src/Microsoft.Azure.Devices.Proxy.Opc.Ua/Microsoft.Azure.Devices.Proxy.Opc.Ua.csproj
@@ -5,7 +5,7 @@
     <AssemblyTitle>Microsoft Azure Devices Opc-UA Reference Stack Proxy Transport</AssemblyTitle>
     <VersionPrefix>1.0.2</VersionPrefix>
     <Authors>microsoft</Authors>
-    <TargetFrameworks>net46;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <NoWarn>$(NoWarn);1591;1734</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -30,17 +30,21 @@
     <ProjectReference Include="..\..\..\..\src\Microsoft.Azure.Devices.Proxy\Microsoft.Azure.Devices.Proxy.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Core" Version="0.2.4" />
-  </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+    <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua">
+      <Version>0.4.5</Version>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.2.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Signed' ">
