--- a/api/csharp/src/Microsoft.Azure.Devices.Proxy/Microsoft.Azure.Devices.Proxy.csproj
+++ b/api/csharp/src/Microsoft.Azure.Devices.Proxy/Microsoft.Azure.Devices.Proxy.csproj
@@ -5,7 +5,7 @@
     <AssemblyTitle>Microsoft Azure Devices Proxy API</AssemblyTitle>
     <VersionPrefix>1.0.2</VersionPrefix>
     <Authors>microsoft</Authors>
-    <TargetFrameworks>net46;net45;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <NoWarn>$(NoWarn);1591;1734</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -42,6 +42,9 @@
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.2.1</AssemblyVersion>
+    <Version>1.0.2.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Signed' ">
