Remove browsing support

--- a/bld/docker/Dockerfile.alpine-3.6
+++ b/bld/docker/Dockerfile.alpine-3.6
@@ -14,5 +14,4 @@ RUN \
             libc-dev \
             linux-headers \
             libressl-dev \
-            curl-dev \
-            avahi-dev
+            curl-dev
