--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,8 @@ environment:
 image: Visual Studio 2017
 install:
   - git submodule update --init
-  - ps: Start-FileDownload 'https://slproweb.com/download/Win32OpenSSL-1_0_2L.exe'
-  - cmd /c Win32OpenSSL-1_0_2L.exe /silent /verysilent /sp- /suppressmsgboxes
+  - ps: Start-FileDownload 'https://slproweb.com/download/Win32OpenSSL-1_0_2n.exe'
+  - cmd /c Win32OpenSSL-1_0_2n.exe /silent /verysilent /sp- /suppressmsgboxes
 build:
 build_script:
   - bld\build.cmd -c %build_args%
